<resources>
    <string name="app_name"> TPVICS-HH urdu </string>
    <string name="btnSync">Sync</string>
    <string name="btnUpload">Upload</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="tdheading"> SECTION D: HOUSEHOLD MEMBER’S INFORMATION </string>
    <string name="teheading"> SECTION E: REPRODUCTIVE HEALTH (Complete this table for all married women aged 15 &#8211; 49 years in the household) </string>
    <string name="te2heading"> MATERNAL MORTALITY STATUS </string>
    <string name="tfheading"> SECTION F: ANTENATAL CARE </string>
    <string name="tiheading"> SECTION I: CHILD HEALTH </string>
    <string name="ti2heading"> SECTION I2: ACUTE RESPIRATORY INFECTION (ARI) </string>
    <string name="tjheading"> SECTION J: IMMUNIZATION </string>
    <string name="tkheading"> SECTION K: FAMILY PLANNING </string>
    <string name="tlheading"> SECTION L: WOMEN EMPOWERMENT </string>
    <string name="tmheading"> SECTION M: SOCIOL ECONOMIC STATUS OF HOUSEHOLD </string>
    <string name="tnheading"> SECTION N: WATER AND SANITATION </string>
    <string name="toheading"> SECTION O: HANDWASHING </string>
    <string name="splashText">Supporting Women and Girls in Pakistan Scaling Up\n
    Empowerment and Care  Strategies  to Address Health and Survival\n
    Centre of Excellence Women &amp; Child Health\n
    Aga Khan University, Karachi, Pakistan</string>
    <string name="splashText1"> Coverage Evaluation Survey, Pakistan, 2020 </string>
    <string name="splashText2"> ۔HOUSEHOLD QUESTIONNAIRE </string>
    <string name="title_activity_family_members_list"> Family Members List </string>
    <string name="sM"> یو سی </string>
    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="dkn"> معلوم نہیں </string>
    <string name="none"> کوئی نہیں </string>
    <string name="never"> کبھی نہیں </string>
    <string name="na"> قابل اطلاق / دستیاب نہیں  </string>
    <string name="nap"> قابل اطلاق نہیں </string>
    <string name="nav"> دستیاب نہیں </string>
    <string name="ref"> انکار کر دیا </string>
    <string name="other"> دیگر </string>
    <string name="specify"> وضاحت کریں </string>
    <string name="year"> سال </string>
    <string name="month"> مہینہ </string>
    <string name="weeks"> ہفتے </string>
    <string name="days"> دن </string>
    <string name="hours"> گھنٹے </string>
    <string name="minutes"> منٹ </string>
    <string name="kg"> کلوگرام </string>
    <string name="km"> کلومیٹر </string>
    <string name="cm"> سینٹی میٹر </string>
    <string name="in"> انچ </string>
    <string name="rupees"> روپے </string>
    <string name="num"> اعداد </string>
    <string name="name"> نام </string>
    <string name="contactnum"> رابطہ نمبر </string>
    <string name="total"> Total </string>
    <string name="under1_2">"Child 12-23 Months "</string>
    <string name="under5"> Child Under 5 </string>
    <string name="taheading"> SECTION A: HH Identification </string>
    <string name="a101"> کلسٹر نمبر </string>
    <string name="a101a"> یہ معلومات ضلعی بنیاد پر بنائی گئی گاؤں کی فہرست پر مبنی ہوں گی۔ ہر انٹرویو کرنے والے کو جس علاقے کا وہ دورہ کرے گا کلسٹرز کی ایک فہرست دی جائے گی اور انٹرویو شروع کرنے سے پہلے اسی فہرست سے یہ معلومات درج کی جائیں گی۔ </string>
    <string name="a102"> کلسٹر کی قسم </string>
    <string name="a102a"> جن کلسٹرز میں ایل ایچ ڈبلیو دورہ کرتی ہے </string>
    <string name="a102b"> جن کلسٹرز میں ایل ایچ ڈبلیو دورہ نہیں کرتی </string>
    <string name="a103"> فارم سیریل نمبر: </string>
    <string name="a104">" صوبہ: "</string>
    <string name="a104a"> بلوچستان </string>
    <string name="a104b"> پنجاب </string>
    <string name="a104c"> سندھ </string>
    <string name="a105">" ضلع: "</string>
    <string name="a105a"> جعفرآباد </string>
    <string name="a105a_title"> بلوچستان </string>
    <string name="a105b"> نصیرآباد </string>
    <string name="a105c"> لسبیلہ </string>
    <string name="a105d"> مظفر گڑھ </string>
    <string name="a105d_title"> پنجاب </string>
    <string name="a105e"> رحیم یار خان </string>
    <string name="a105f"> بدین </string>
    <string name="a105f_title"> سندھ </string>
    <string name="a105g"> سانگھڑ </string>
    <string name="a105h"> قمبر شہداد کوٹ </string>
    <string name="a106">" تحصیل: "</string>
    <string name="a107">" یوسی: "</string>
    <string name="a108"> جگہ / تحقیق: </string>
    <string name="a108a"> شہری </string>
    <string name="a108b"> دیہی </string>
    <string name="a109"> گاؤں کا نام: </string>
    <string name="a110"> بلاک / محلہ </string>
    <string name="a111">" گلی: "</string>
    <string name="a112"> گھر / خاندان نمبر </string>
    <string name="a112a"> دستیاب نہیں </string>
    <string name="checkHHpresent"> گھر کے سربراہ کا نام لائن لسٹنگ ڈیٹا سے مطابقت رکھتا ہے۔ </string>
    <string name="newHHheadname"> نیا سربراہ کا نام </string>
    <string name="b101"> Latitude (Example: 24.861462) </string>
    <string name="b102"> Longitude (Example:67.009939) </string>
    <string name="c101"> C101:\t کیا رضامندی لی گئی تھی ؟ </string>
    <string name="c101a"> زبانی اجازت نامہ </string>
    <string name="c101aa"> جی ہاں </string>
    <string name="c101ab"> نہیں </string>
    <string name="c101b"> C101b:\t تحریری اجازت نامہ </string>
    <string name="c101ba"> جی ہاں </string>
    <string name="c101bb"> نہیں </string>
    <string name="d101"> D101:\t گھر کے فرد کا سیریل نمبر ؟ </string>
    <string name="d101name"> نام اور سیریل نمبر: </string>
    <string name="d102"> D102:\t گھر کے فرد کا نام کیا ہے ؟ </string>
    <string name="d102a"> برا ئے مہربانی پہلے مجھے ان تمام افراد کا نام بتائیں جو عام طور پر یہاں رہتے ہیں، خاندان کے سربراہ سے شروع کریں </string>
    <string name="d103"> D103:\t گھر کے سربراہ سے رشتہ ؟ </string>
    <string name="d103hint"> (نام) کا گھر کے سربراہ سے کیا تعلق ہے ؟ </string>
    <string name="d103a"> گھر کا سربراہ </string>
    <string name="d103b"> بیوی / شوہر </string>
    <string name="d103c"> بیٹا / بیٹی </string>
    <string name="d103d"> داماد / بہو </string>
    <string name="d103e"> پوتا، پوتی / نواسا، نواسی </string>
    <string name="d103f"> والدین </string>
    <string name="d103g"> ساس / سُسر </string>
    <string name="d103h"> بھائی /  بہن </string>
    <string name="d103i"> دیور، دیورانی / بھابھی، بہنوئی / سالا، سالی </string>
    <string name="d103j"> بھتیجا، بھتیجی / بھانجا، بھانجی </string>
    <string name="d103k"> دادا، دادی / نانا، نانی </string>
    <string name="d103l"> پھُوپو، پھُوپا / خالو، خاله / چچا، چچی / ماموں، ممانی </string>
    <string name="d103m"> سوتیلے / رضاعی / لے پالک بچے </string>
    <string name="d103n"> گحریلو ملازم </string>
    <string name="d103o"> معلوم نہیں </string>
    <string name="d104"> D104:\t گھر کے فرد کی صنف کیا ہے ؟ </string>
    <string name="d104a"> لڑکا </string>
    <string name="d104b"> لڑکی </string>
    <string name="d105"> D105:\t گھر کے فرد کی ازدواجی حیثیت کیا ہے ؟ </string>
    <string name="d105a"> شادی شدہ </string>
    <string name="d105b"> غیر شادی شدہ </string>
    <string name="d105c"> بیوہ / رنڈوہ </string>
    <string name="d105d"> طلاق یافتہ / الگ رہتا / رہتی ہوں </string>
    <string name="d106"> D106:\t  اگر ممبر کی فہرست میں باپ سے رشتہ نہیں بتایا گیا تو ‘NA’ لکھیں ۔ </string>
    <string name="d106a"> باپ کا سیریل نمبر </string>
    <string name="d106b"> NA </string>
    <string name="d107"> D107:\t اگر ممبر کی فہرست میں ماں سے رشتہ نہیں بتایا گیا ‘NA’ تو لکھیں ۔ </string>
    <string name="d107a"> ماں کا سیریل نمبر </string>
    <string name="d107b"> NA </string>
    <string name="d108"> D108:\t تاریخ پیدائش : اگر تاریخ پیدائش معلوم نہیں تو ‘00’ ریکارڈ کریں اور عمر درج کریں </string>
    <string name="uf09"> uf09: والدہ / دیکھ بھال کرنے والے  کا نام</string>
    <string name="uf9a"> uf9a: والدہ/ دیکھ بھال کرنے والے  کی عمرمکمل سالوں میں </string>
    <string name="uf9b">  کا رشتہ بچے کے ساتھ جواب دہندہ</string>
    <string name="uf9b1"> والد/والدہ/ دیکھ بھال کرنے والا/وال</string>
    <string name="uf9b2"> حفاظتی ٹیکے لگ گئے لیکن خاندان کے رکن کو معلوم نہیں</string>
    <string name="uf9b98"> دیگر وضاحت</string>
    <string name="uf14"> uf14:  چیک کریں کہ کیا آیااس گھر میں جواب دہندہ کا انٹرویو گھریلو یا بچوں کے سوالنامہ کے لئےکر لیا گیا ہے؟</string>
    <string name="uf14a"> ہاں ،  پہلے ہی انٹرہو چکاہے</string>
    <string name="uf14b"> نہیں ، پہلا انٹرویو</string>
    <string name="uf15"> uf15: اسلام وعلیکم، میرا نام(آپ کا نام)ہے۔ ہ ہمارا تعلق  قومی ادارہ صحت، حکومت پاکستان سے ہیں۔ہم پاکستان میں بچوں کی صحت کے حوالے سے ایک سروے کا انعقاد کررہے ہیں۔میں آپ سے آپ کے (بچے کا نام) کی حفاظتی ٹیکوں کی گزشتہ معلومات  کے بارے میں بات کرنا چاہتا/چاہتی ہوں۔اس انٹرویو میں تقریباً 30منٹس لگیں گے۔ آپ سے حاصل کردہ تمام معلومات  مکمل طور پر خفیہ رہیں گی اور آپکا نام ظاہرنہیں کیا جائے گا۔ اگر آپ کسی سوال کا جواب نہیں دینا چاہتے یا اس انٹرویوکو روکنا چاہتے  ہیں ، تو براہ کرم مجھے بتائیں۔ کیا میں اب انٹرویو شروع کر سکتی/سکتا ہوں؟</string>
    <string name="uf15a"> ہاں، اجازت مل گئی ہے</string>
    <string name="uf15b"> نہیں، اجازت نہیں ملی</string>
    <string name="uf15b_title"> uf15b_title: اب میں آپ سے آپ کے (بچے کا نام) کی حفاظتی ٹیکوں کی گزشتہ معلومات  کے بارے میں مزید تفصیل سے  بات کرنا چاہتا/چاہتی ہوں۔اس انٹرویو میں تقریباً 30منٹس لگیں گے۔میں پھر کہتا /کہتی ہوں کہ، آپ سے حاصل کردہ تمام معلومات  مکمل طور پر خفیہ اور  رہیں گی اور آپکا نام ظاہرنہیں  کیا جائے گا۔ اگر آپ کسی سوال کا جواب نہیں دینا چاہتے یا اس انٹرویوکو روکنا چاہتے  ہیں ، تو براہ کرم مجھے بتائیں۔ کیا میں اب انٹرویو شروع کر سکتی/سکتا ہوں؟</string>
    <string name="im1title1"> im1title1: سے چیک کریں:CB4اہل بچے کی عمر سوال نمبر</string>
    <string name="imtitle2"> imtitle2: اگر بچہ12سے 23 ماہ کی عمر کے گروپ کا نہیں ہے،تو ایک بار پھر تحقیق کریں اور تصدیق کریں اور اگرپھر بھی اس کی عمر12سے 23ماہ نہیں بنتی ،تو جواب دہندہ کا شکریہ ادا کر کے انٹرویو کا اختتام کردیں۔اہل بچے کے معلوماتی پینل UF16 پر جائیں ، اور بچہ اہل نہیں/بچے کی عمر 12 سے 23مہینے  نہیں کوڈ05 پر نشان لگائیں ۔</string>
    <string name="im01"> im01: کیا آپ کے پاس کسی سرکاری یا نجی مرکز صحت سے ملا ہوا حفاظتی ٹیکوں کا کارڈ موجود ہے جس میں بچہ/بچی (نام) کو لگنے والے حفاظتی ٹیکوں کا اندراج ہو؟ </string>
    <string name="im011"> ہاں دیکھ لیا</string>
    <string name="im012">  ہاں، کارڈنہیں دیکھا</string>
    <string name="im013"> کارڈ نہیں ہے</string>
    <string name="im02"> im02: کیا بچےکے لئےآپ کے پاس کبھی کسی سرکاری یا نجی مرکز صحت کا حفاظتی ٹیکوں کا کارڈ موجود تھا؟ </string>
    <string name="im021"> ہاں</string>
    <string name="im022"> نہیں</string>
    <string name="im02a"> اگر نہیں تو ، آپ کو کوئی ویکسینیشن کارڈ کیوں نہیں ملا؟</string>
    <string name="im02a1"> میرے خیال سے اتنا اہم نہیں </string>
    <string name="im02a2"> کبھی مرکز صحت میں نہیں گئے </string>
    <string name="im02a3"> گم گیا ہے </string>
    <string name="im02a4"> سہولت فراہم کرنے والے کے پاس کارڈ دستیاب نہیں تھا</string>
    <string name="im02a5"> ویکسینیٹر/ مرکزصحت نے کارڈ مہیا نہیں کی</string>
    <string name="im02a6"> ایسے کارڈوں سے واقف نہیں </string>
    <string name="im02a96"> دیگر وضاحت کریں</string>
    <string name="end_interview"> ختم </string>
    <string name="nextSection"> اگلا </string>
    <string name="name_not_found">Name Not Found</string>
    <string name="father_name_not_found">Father name Not Found</string>
    <string name="mother_name_not_found">Mother name Not Found</string>
    <string name="serialStart">00</string>
</resources>