<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.tpvics_hh.ui.sections.SectionCHAActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/fldGrpSectionCHA"
            style="@style/linearlayout_view_wt_bound">


            <!-- uf09  Input   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVuf09"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uf09" />

                    <EditText
                        android:id="@+id/uf09"
                        style="@style/EditTextAlpha"
                        android:hint="@string/uf09" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- uf9a  Input-Numeric   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVuf9a"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uf9a" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/uf9a"
                        style="@style/EditTextAlpha"
                        android:hint="@string/uf9a"
                        android:inputType="number"
                        app:mask="##"
                        app:maxValue="99"
                        app:minValue="17"
                        app:type="range" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- uf9b  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVuf9b"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uf9b" />

                    <RadioGroup
                        android:id="@+id/uf9b"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/uf9b1"
                            style="@style/radiobutton"
                            android:text="@string/uf9b1" />

                        <RadioButton
                            android:id="@+id/uf9b2"
                            style="@style/radiobutton"
                            android:text="@string/uf9b2" />

                        <RadioButton
                            android:id="@+id/uf9b98"
                            style="@style/radiobutton"
                            android:text="@string/uf9b98" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- uf14  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVuf14"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uf14" />

                    <RadioGroup
                        android:id="@+id/uf14"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/uf14a"
                            style="@style/radiobutton"
                            android:text="@string/uf14a" />

                        <RadioButton
                            android:id="@+id/uf14b"
                            style="@style/radiobutton"
                            android:text="@string/uf14b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- uf15  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVuf15"
                style="@style/cardView"
                android:visibility='@{uf14a.checked ? View.GONE : View.VISIBLE}'>

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/sub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uf15" />

                    <RadioGroup
                        android:id="@+id/uf15"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/uf15a"
                            style="@style/radiobutton"
                            android:text="@string/uf15a" />

                        <RadioButton
                            android:id="@+id/uf15b"
                            style="@style/radiobutton"
                            android:text="@string/uf15b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- uf15b_title  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVuf15b_title"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/sub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uf15b_title" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!--ENDBUTTON linearlayout-->
            <LinearLayout
                style="@style/hlinearlayout"
                android:layout_gravity="end"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnEnd"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_red_light"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_green_light"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>