<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.tpvics_hh.ui.sections.SectionCHCActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/fldGrpSectionCHC"
            style="@style/linearlayout_view_wt_bound">

            <!-- im1title1  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVim1title1"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/im1title1" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- imtitle2  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVimtitle2"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/imtitle2" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- im01  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVim01"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_im01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_im01"
                            android:text="@string/im01" />

                        <TextView
                            android:id="@+id/q_im01"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_im01"
                            android:layout_alignBottom="@id/qtxt_im01"
                            android:gravity="center"
                            android:text="@string/Q_im01" />
                    </RelativeLayout>


                    <RadioGroup
                        android:id="@+id/im01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/im011"
                            style="@style/radiobutton"
                            android:text="@string/im011" />

                        <RadioButton
                            android:id="@+id/im012"
                            style="@style/radiobutton"
                            android:text="@string/im012" />

                        <RadioButton
                            android:id="@+id/im013"
                            style="@style/radiobutton"
                            android:text="@string/im013" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/fldGrpSecChc1"
                style="@style/linearlayout_view_wt_bound">

                <!-- im02  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVim02"
                    style="@style/cardView">

                    <LinearLayout style="@style/vlinearlayout">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom">

                            <TextView
                                android:id="@+id/qtxt_im02"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/q_im02"
                                android:text="@string/im02" />

                            <TextView
                                android:id="@+id/q_im02"
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@id/qtxt_im02"
                                android:layout_alignBottom="@id/qtxt_im02"
                                android:gravity="center"
                                android:text="@string/Q_im02" />

                        </RelativeLayout>


                        <RadioGroup
                            android:id="@+id/im02"
                            style="@style/hradiogroup">

                            <RadioButton
                                android:id="@+id/im021"
                                style="@style/radiobutton"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/im021" />

                            <RadioButton
                                android:id="@+id/im022"
                                style="@style/radiobutton"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/im022" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- im02a  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVim02a"
                    style="@style/cardView">

                    <LinearLayout style="@style/vlinearlayout">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom">

                            <TextView
                                android:id="@+id/qtxt_im02a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/q_im02a"
                                android:text="@string/im02a" />

                            <TextView
                                android:id="@+id/q_im02a"
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@id/qtxt_im02a"
                                android:layout_alignBottom="@id/qtxt_im02a"
                                android:gravity="center"
                                android:text="@string/Q_im02a" />

                        </RelativeLayout>


                        <RadioGroup
                            android:id="@+id/im02a"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/im02a1"
                                style="@style/radiobutton"
                                android:text="@string/im02a1" />

                            <RadioButton
                                android:id="@+id/im02a2"
                                style="@style/radiobutton"
                                android:text="@string/im02a2" />

                            <RadioButton
                                android:id="@+id/im02a3"
                                style="@style/radiobutton"
                                android:text="@string/im02a3" />

                            <RadioButton
                                android:id="@+id/im02a4"
                                style="@style/radiobutton"
                                android:text="@string/im02a4" />

                            <RadioButton
                                android:id="@+id/im02a5"
                                style="@style/radiobutton"
                                android:text="@string/im02a5" />

                            <RadioButton
                                android:id="@+id/im02a6"
                                style="@style/radiobutton"
                                android:text="@string/im02a6" />

                            <RadioButton
                                android:id="@+id/im02a96"
                                style="@style/radiobutton"
                                android:text="@string/im02a96" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <!--ENDBUTTON linearlayout-->
            <LinearLayout
                style="@style/hlinearlayout"
                android:layout_gravity="end"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnEnd"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_red_light"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/buttons_bottom"
                    android:background="@android:color/holo_green_light"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>