<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        style="@style/cardView"
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:layout_margin="8dp"
        android:background="@drawable/card_design"
        android:elevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:id="@+id/index"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/serialStart"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="12dp">


                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_not_found"
                        android:textColor="@color/colorPrimary"
                        android:padding="0dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fatherName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/father_name_not_found"
                        android:textColor="#7f7f7f" />

                    <TextView
                        android:id="@+id/motherName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mother_name_not_found"
                        android:textColor="#7f7f7f"

                        />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="12/10/2020"

                        android:textColor="#7f7f7f" />

                </LinearLayout>



                <LinearLayout
                    android:id="@+id/checkIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="12dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/genderImage"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/mother" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
